# c-aff4

./: .gitignore  .gitmodules  AUTHORS  CHANGES  CONTRIBUTING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.docker  README.linux  README.macos  README.md  README.windows  aclocal.m4  aff4.h  aff4_base.h  aff4_errors.h  aff4_image.cc  aff4_image.h  aff4_init.cc  aff4_init.h  aff4_io.h  aff4_utils.h  autogen.sh  config.status  configure  configure.ac  data_store.cc  data_store.h  docker-compose.yml  lexicon.h  libaff4.cc  libaff4.h  libtool  rdf.cc  rdf.h  stream_test.cc  zip.cc  (+1 more)
.github/workflows/: main.yml
aff4/: Makefile.am  aff4_base.h  aff4_directory.cc  aff4_directory.h  aff4_errors.h  aff4_file.cc  aff4_file.h  aff4_image.cc  aff4_image.h  aff4_imager_utils.cc  aff4_imager_utils.h  aff4_init.cc  aff4_init.h  aff4_io.h  aff4_map.cc  aff4_map.h  aff4_registry.h  aff4_symstream.cc  aff4_symstream.h  aff4_utils.h  aff4imager.cc  attributes.h  compatibility.cc  config.h.in  data_store.cc  data_store.h  lexicon.cc  lexicon.h  lexicon.inc  libaff4-c.cc  libaff4-c.h  libaff4.cc  libaff4.h  rdf.cc  rdf.h  tclap_parsers.cc  tclap_parsers.h  threadpool.h  volume_group.cc  volume_group.h  (+2 more)
docker/: Dockerfile  Makefile-deps  entrypoint.sh  toolchain-mingw32.cmake
docs/: Doxyfile  Doxyfile.in  Makefile.am  conf.py  developers.rst  index.rst  make.bat
m4/: ax_cxx_compile_stdcxx.m4  m4_ax_cxx_compile_stdcxx14.m4  m4_ax_cxx_compile_stdcxx17.m4  m4_ax_cxx_compile_stdcxx_11.m4  uriparser.m4  w32.m4
pyaff4/: .gitignore  MANIFEST.in  README.txt  _version.py  aff4.py  aff4_directory.py  aff4_file.py  aff4_image.py  aff4_imager_utils.py  aff4_map.py  aff4_map_test.py  aff4_utils.py  aff4image_test.py  data_store.py  data_store_test.py  lexicon.py  plugins.py  rdfvalue.py  rdfvalue_test.py  registry.py  setup.cfg  setup.py  stream_test.py  struct_parser.py  version.py  version.yaml  zip.py  zip_test.py
pyaff4/pyaff4/: __init__.py  _version.py  aff4.py  aff4_cloud.py  aff4_directory.py  aff4_directory_test.py  aff4_file.py  aff4_image.py  aff4_image_test.py  aff4_imager_utils.py  aff4_map.py  aff4_map_test.py  aff4_utils.py  aff4image_test.py  block_hasher.py  container.py  container_test.py  data_store.py  data_store_test.py  hashes.py  hashing_test.py  lexicon.py  linear_hasher.py  plugins.py  rdfvalue.py  rdfvalue_test.py  registry.py  standards_test.py  stream_factory.py  stream_test.py  struct_parser.py  symbolic_streams.py  test.sh  test_hashing.py  test_memory.py  utils.py  zip.py  zip_test.py
pyaff4/python-snappy/: setup.py
samples/: FAT16.VHD.AF4  test.sh
src/: Doxyfile  Makefile  Makefile.am  Makefile.in  aff4_base.h  aff4_config.h  aff4_config.h.in  aff4_directory.cc  aff4_directory.h  aff4_errors.h  aff4_file.cc  aff4_file.h  aff4_image.cc  aff4_image.h  aff4_imager_utils.cc  aff4_imager_utils.h  aff4_init.h  aff4_io.h  aff4_map.cc  aff4_map.h  aff4_registry.h  aff4_simple.h  aff4_symstream.cc  aff4_symstream.h  aff4_utils.h  aff4imager.cc  config.h.in  data_store.cc  data_store.h  lexicon.cc  lexicon.h  lexicon.inc  libaff4-c.cc  libaff4-c.h  libaff4.cc  libaff4.h  rdf.cc  rdf.h  setup.py  stream_test.cc  (+4 more)
tests/: .gitignore  Makefile.am  Makefile.in  aff4_capi.cc  aff4_image_test.cc  aff4_map_tests.cc  aff4tests.cc  data_store_test.cc  directory_test.cc  prepare.py  rdf_tests.cc  rdfquery_test.cc  stream_test.cc  utils.h  utils_test.cc  zip_test.cc
tools/pmem/: .gitignore  Makefile.am  linux_pmem.cc  linux_pmem.h  osxpmem.cc  osxpmem.h  pmem.h  pmem_imager.cc  win_pmem.cc  win_pmem.h
tools/pmem/resources/: pmem.aff4
tools/pmem/resources/OSX/: pmem_common.h
tools/scripts/: encode.py
